--- a/src/Pages/Banner/Banner.css
+++ b/src/Pages/Banner/Banner.css
@@ -1,15 +1,40 @@
-.custom-bg{
-    background-image: url("../../images/greenland-chris-brinlee-jr-visit-greenland-4-flipped.jpg");
+
+.custom-bg {
+    background-image: url('../../images/greenland-chris-brinlee-jr-visit-greenland-4-flipped.jpg');
+    background-size:cover;
+    background-repeat: no-repeat;
+    /* background-size: contain; */
     background-position: center;
-    background-size: cover;
+    position: relative;
     height: 100vh;
-    text-align: center;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
 }
+
+.custom-bg::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    opacity: 0.3;
+    z-index: -1;
+}
+
+
+
+
 .text-style{
     font-size:40px;
     color:white;
     font-weight: bold;
 }
+
 
 .text-design{
     font-size:40px;
